--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "repository": "https://github.com/amaralc/react-three-plot",
   "author": "Amaral, C.",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "eslint": "^7.28.0",
+    "react": "^17.0.2",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.129.0"
+  }
 }
